make phone.css & edit index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
     <link rel="stylesheet" href="css/web-design.css">
+    <link rel="stylesheet" media="screen and (min-width: 300px) and (max-width: 500px)" href="css/phone.css">
     <title>Web Design</title>
 </head>
 
