--- a/index.html
+++ b/index.html
@@ -11,112 +11,117 @@
 </head>
 
 <body>
-    <div>
-        <nav>
-            <a href="#">Stratergy</a>
-            <a href="#">Development</a>
-            <a href="#">Home</a>
-            <a href="#">Careers</a>
-            <a href="/assets/Jai's Resume.pdf">Academy</a>
-        </nav>
+    <main>
+        <img
+            src="https://images.pexels.com/photos/3507116/pexels-photo-3507116.jpeg?cs=srgb&dl=pexels-lucas-mendes-3507116.jpg&fm=jpg">
         <div>
+            <nav>
+                <a href="#">Stratergy</a>
+                <a href="#">Development</a>
+                <a href="#">Home</a>
+                <a href="#">Careers</a>
+                <a href="/assets/Jai's Resume.pdf">Academy</a>
+            </nav>
             <div>
-                <h1>Hi, I am Jai Dev. My Dream is to make identity in this World</h1>
-                <p>Empower customer to engage with your business on the messaging plateform that your are already use.
-                </p>
-                <a href="/assets/Jai's Resume.pdf" type="button">View Resume</a>
-            </div>
-            <div>
-                <!-- Svg -->
-                <img src="assets/svg/undraw_snow_games_ohkc.svg">
-            </div>
-        </div>
-    </div>
-    <div>
-        <!-- Second Container -->
-        <h1>Build a chatbot that taloired your need</h1>
-        <div>
-            <div>
-                <img src="assets/svg/undraw_instant_support_elxh.svg">
                 <div>
-                    <h3>Customer Support</h3>
-                    <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
+                    <h1>Hi, I am Jai Dev. My Dream is to make identity in this World</h1>
+                    <p>Empower customer to engage with your business on the messaging plateform that your are already
+                        use.
+                    </p>
+                    <a href="/assets/Jai's Resume.pdf" type="button">View Resume</a>
                 </div>
-            </div>
-            <div>
-                <img src="assets/svg/undraw_Marketing_re_7f1g.svg">
                 <div>
-                    <h3>Marketing</h3>
-                    <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
-                </div>
-            </div>
-            <div>
-                <img src="assets/svg/undraw_events_2p66.svg">
-                <div>
-                    <h3>Events & Conference</h3>
-                    <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
+                    <!-- Svg -->
+                    <img src="assets/svg/undraw_snow_games_ohkc.svg">
                 </div>
             </div>
         </div>
-    </div>
-    <div>
-        <!-- Second Container -->
-        <h1>What type of Bot you need</h1>
         <div>
+            <!-- Second Container -->
+            <h1>Things I love to Work With</h1>
             <div>
                 <div>
-                    <a href="#" class="im im-cc-visa"></a>
+                    <img src="assets/svg/undraw_web_development_w2vv.svg">
+                    <div>
+                        <h3>Web Development</h3>
+                        <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
+                    </div>
                 </div>
-                <div>Customer Support Chatbot</div>
-            </div>
-            <div>
                 <div>
-                    <a href="#" class="im im-cc-mastercard"></a>
+                    <img src="assets/svg/undraw_Marketing_re_7f1g.svg">
+                    <div>
+                        <h3>Marketing</h3>
+                        <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
+                    </div>
                 </div>
-                <div>Marketing Chatbot</div>
-            </div>
-            <div>
                 <div>
-                    <a href="#" class="im im-cc-paypal"></a>
+                    <img src="assets/svg/undraw_events_2p66.svg">
+                    <div>
+                        <h3>Events & Conference</h3>
+                        <p>Dribbble is the world’s leading community for creatives to share, grow, and get hired</p>
+                    </div>
                 </div>
-                <div>Events & Conference Chatbot</div>
-            </div>
-            <div>
-                <div>
-                    <a href="#" class="im im-cc-bitcoin"></a>
-                </div>
-                <div>Alexa skill & Google Home Voice Skill</div>
-            </div>
-        </div>
-    </div>
-    <div>
-        <h1>Get the most cross plateform</h1>
-        <div>
-            <img src="assets/svg/undraw_mobile_photos_psm5.svg">
-            <div>
-                <h2>Rapid Development</h2>
-                <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
             </div>
         </div>
         <div>
+            <!-- Second Container -->
+            <h1>What type of Bot you need</h1>
             <div>
-                <h2>Analytics Dashboard</h2>
-                <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
+                <div>
+                    <div>
+                        <a href="#" class="im im-cc-visa"></a>
+                    </div>
+                    <div>Customer Support Chatbot</div>
+                </div>
+                <div>
+                    <div>
+                        <a href="#" class="im im-cc-mastercard"></a>
+                    </div>
+                    <div>Marketing Chatbot</div>
+                </div>
+                <div>
+                    <div>
+                        <a href="#" class="im im-cc-paypal"></a>
+                    </div>
+                    <div>Events & Conference Chatbot</div>
+                </div>
+                <div>
+                    <div>
+                        <a href="#" class="im im-cc-bitcoin"></a>
+                    </div>
+                    <div>Alexa skill & Google Home Voice Skill</div>
+                </div>
             </div>
-            <img src="assets/svg/undraw_dashboard_nklg.svg">
         </div>
         <div>
+            <h1>Get the most cross plateform</h1>
+            <div>
+                <img src="assets/svg/undraw_mobile_photos_psm5.svg">
+                <div>
+                    <h2>Rapid Development</h2>
+                    <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h2>Analytics Dashboard</h2>
+                    <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
+                </div>
+                <img src="assets/svg/undraw_dashboard_nklg.svg">
+            </div>
+            <div>
 
-            <img src="assets/svg/undraw_good_team_m7uu.svg">
-            <div>
-                <h2>Integrations</h2>
-                <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
+                <img src="assets/svg/undraw_good_team_m7uu.svg">
+                <div>
+                    <h2>Integrations</h2>
+                    <p>Quickly deploy across all the devices with a few seconds all over the world.</p>
+                </div>
             </div>
         </div>
-    </div>
-    <div>
-        <h1>Footer</h1>
-    </div>
+        <div>
+            <h1>Footer</h1>
+        </div>
+    </main>
 </body>
 
 </html>
