--- a/Flo/index.html
+++ b/Flo/index.html
@@ -148,14 +148,14 @@
     <div>
 
         <sm-tab-header target="tab1">
-            <sm-tab rank="0">Send Application Data</sm-tab>
-            <sm-tab rank="1">Request Application Data</sm-tab>
-            <sm-tab rank="2">Send General Data</sm-tab>
-            <sm-tab rank="3">Request General Data</sm-tab>
-            <sm-tab rank="4">Reset Object Data</sm-tab>
-            <sm-tab rank="5">Update Object Data</sm-tab>
-            <sm-tab rank="6">Request Object Data</sm-tab>
-            <sm-tab rank="7">Get Encrypted Data</sm-tab>
+            <sm-tab>Send Application Data</sm-tab>
+            <sm-tab>Request Application Data</sm-tab>
+            <sm-tab>Send General Data</sm-tab>
+            <sm-tab>Request General Data</sm-tab>
+            <sm-tab>Reset Object Data</sm-tab>
+            <sm-tab>Update Object Data</sm-tab>
+            <sm-tab>Request Object Data</sm-tab>
+            <sm-tab>Get Encrypted Data</sm-tab>
         </sm-tab-header>
 
         <sm-tab-panels id="tab1">
